--- a/p300_model_by_Deepchem.ipynb
+++ b/p300_model_by_Deepchem.ipynb
@@ -6,7 +6,7 @@
       "name": "p300 model by Deepchem.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyML6F63kFKpkIcp66EstsAS",
+      "authorship_tag": "ABX9TyMMsIRgYP/CFmgiO1uIxFfS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,13 +223,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uxhIODSt_4_X",
-        "outputId": "e6e55f4d-a78e-46fa-8897-9d74bc472cc6"
+        "outputId": "cfbdde95-a15e-4af8-ae48-a936fc083534"
       },
       "source": [
-        "# Getting the delaney dataset\n",
-        "!wget https://raw.githubusercontent.com/rohmadyudiutomo/p300/main/Cur%20der%20p300%20from%20Yang%20et%20al%20filter.csv\n",
+        "# Getting the dataset\n",
+        "!wget https://raw.githubusercontent.com/rohmadyudiutomo/p300/main/Cur%20der%20p300%20from%20Yang%20et%20al%20mix%20cur%20filter.csv\n",
         "from deepchem.utils.save import load_from_disk\n",
-        "dataset_file= \"Cur der p300 from Yang et al filter.csv\"\n",
+        "dataset_file= \"Cur der p300 from Yang et al mix cur filter.csv\"\n",
         "\n",
         "# Loading the data from the CSV file\n",
         "loader = deepchem.data.CSVLoader(tasks=[\"pIC50\"], \n",
@@ -238,21 +238,21 @@
         "# Featurizing the dataset with ConvMolFeaturizer\n",
         "dataset = loader.featurize(dataset_file)"
       ],
-      "execution_count": 4,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-11-18 01:37:33--  https://raw.githubusercontent.com/rohmadyudiutomo/p300/main/Cur%20der%20p300%20from%20Yang%20et%20al%20filter.csv\n",
+            "--2020-11-18 03:18:09--  https://raw.githubusercontent.com/rohmadyudiutomo/p300/main/Cur%20der%20p300%20from%20Yang%20et%20al%20mix%20cur%20filter.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 263790 (258K) [text/plain]\n",
-            "Saving to: ‘Cur der p300 from Yang et al filter.csv’\n",
+            "Length: 13978 (14K) [text/plain]\n",
+            "Saving to: ‘Cur der p300 from Yang et al mix cur filter.csv.1’\n",
             "\n",
-            "Cur der p300 from Y 100%[===================>] 257.61K  --.-KB/s    in 0.02s   \n",
+            "Cur der p300 from Y 100%[===================>]  13.65K  --.-KB/s    in 0s      \n",
             "\n",
-            "2020-11-18 01:37:33 (11.0 MB/s) - ‘Cur der p300 from Yang et al filter.csv’ saved [263790/263790]\n",
+            "2020-11-18 03:18:10 (105 MB/s) - ‘Cur der p300 from Yang et al mix cur filter.csv.1’ saved [13978/13978]\n",
             "\n"
           ],
           "name": "stdout"
@@ -260,8 +260,6 @@
         {
           "output_type": "stream",
           "text": [
-            "deepchem.utils.save has been deprecated.\n",
-            "The utilities in save.py are moved to deepchem.utils.data_utils or deepchem.utils.genomics_utils.\n",
             "smiles_field is deprecated and will be removed in a future version of DeepChem.Use feature_field instead.\n",
             "/usr/local/lib/python3.6/dist-packages/deepchem/data/data_loader.py:162: FutureWarning: featurize() is deprecated and has been renamed to create_dataset().featurize() will be removed in DeepChem 3.0\n",
             "  \"featurize() will be removed in DeepChem 3.0\", FutureWarning)\n"
@@ -291,7 +289,7 @@
         "train = normalizer.transform(train)\n",
         "test = normalizer.transform(valid)"
       ],
-      "execution_count": 6,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -301,26 +299,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XV5KS-KzACDz",
-        "outputId": "b28f94c1-0461-4fd2-d21b-b41c16cd1ac9"
+        "outputId": "dc0909d2-05c2-4d37-aae7-990c464abf1a"
       },
       "source": [
         "print(f\"Size of the training data: {len(train.ids)}\")\n",
         "print(f\"Size of the validation data: {len(valid.ids)}\")\n",
         "print(test)"
       ],
-      "execution_count": 7,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Size of the training data: 70\n",
-            "Size of the validation data: 29\n",
-            "<DiskDataset X.shape: (29,), y.shape: (29, 1), w.shape: (29, 1), ids: ['O=C1/C(=C/c2ccc(O)c(Br)c2)CCC/C1=C\\\\c1ccc(O)c(Br)c1'\n",
-            " 'O=c1ccsn1-c1cccnc1' 'O=C(O)c1ccc(-n2nnnc2SC2=CS(=O)(=O)c3ccccc32)cc1'\n",
-            " ...\n",
-            " 'C[C@H](C1CC1)N(Cc1ccccc1)C(=O)CN1C(=O)N[C@]2(CCc3cc(NS(C)(=O)=O)ccc32)C1=O'\n",
-            " 'CNC(=O)Nc1ccc2c(c1)CC[C@@]21NC(=O)N(CC(=O)N(Cc2ccccc2)[C@H](C)C2CC2)C1=O'\n",
-            " 'O=c1c2ccccc2sn1-c1nccs1'], task_names: ['pIC50']>\n"
+            "Size of the training data: 102\n",
+            "Size of the validation data: 43\n",
+            "<DiskDataset X.shape: (43,), y.shape: (43, 1), w.shape: (43, 1), ids: ['CC1=NN(c2ccc(C(=O)O)cc2)C(=O)/C1=C\\\\c1ccc(-c2cc(C)c(C)cc2[N+](=O)[O-])o1'\n",
+            " 'O=C1/C(=C/c2ccc(O)c(Br)c2)CCC/C1=C\\\\c1ccc(O)c(Br)c1'\n",
+            " 'CC(C)N(Cc1ccc2c(c1)C=CC(C)(C)O2)S(=O)(=O)c1ccccn1' ...\n",
+            " 'O=C(c1ccc(O)c(NC(=O)c2cccc3ccccc23)c1)c1ccc(O)c(NC(=O)c2cccc3ccccc23)c1'\n",
+            " 'CNC(=O)Nc1ccc2c(c1)CC[C@@]21OC(=O)N(CC(=O)N(Cc2ccccc2)[C@H](C)C2CC2)C1=O'\n",
+            " 'C[C@H](C1CC1)N(Cc1ccccc1)C(=O)CN1C(=O)N[C@@]2(CCc3ccccc32)C1=O'], task_names: ['pIC50']>\n"
           ],
           "name": "stdout"
         }
@@ -337,12 +335,12 @@
         "# learning molecular fingerprints.\"\n",
         "from deepchem.models import GraphConvModel\n",
         "graph_conv = GraphConvModel(1,\n",
-        "                            batch_size=50,\n",
+        "                            batch_size=30,\n",
         "                            mode=\"regression\")\n",
         "# Defining metric. Closer to 1 is better\n",
         "metric = deepchem.metrics.Metric(deepchem.metrics.pearson_r2_score)"
       ],
-      "execution_count": 8,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -352,33 +350,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KKd-yDFJAdZA",
-        "outputId": "a3d2ebec-d5e5-485c-8b43-9d164b11ded8"
+        "outputId": "d384f1c4-1eeb-46e4-adac-b4cbe554a0ef"
       },
       "source": [
         "# Fitting the model\n",
-        "graph_conv.fit(train, nb_epoch=150)"
+        "graph_conv.fit(train, nb_epoch=100)"
       ],
-      "execution_count": 9,
+      "execution_count": 98,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/indexed_slices.py:433: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-            "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.07536198616027832"
+              "0.03761035919189453"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 98
         }
       ]
     },
@@ -389,22 +379,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ir5mUYGPAgOB",
-        "outputId": "548a7b7e-fc7c-4706-8012-12496b8622cc"
+        "outputId": "304c1267-f570-41e6-9167-ff33b8e158a2"
       },
       "source": [
         "# Reversing the transformation and getting the metric scores on 2 datasets\n",
         "train_scores = graph_conv.evaluate(train, [metric], [normalizer])\n",
         "valid_scores = graph_conv.evaluate(valid, [metric], [normalizer])\n",
+        "test_scores = graph_conv.evaluate(test, [metric], [normalizer])\n",
         "print(f\"Train Scores: {train_scores}\")\n",
-        "print(f\"Validation Scores: {valid_scores}\")"
+        "print(f\"Validation Scores: {valid_scores}\")\n",
+        "print(f\"test Scores: {test_scores}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train Scores: {'pearson_r2_score': 0.44529222612155234}\n",
-            "Validation Scores: {'pearson_r2_score': 0.20922024014838095}\n"
+            "Train Scores: {'pearson_r2_score': 0.9602700641681027}\n",
+            "Validation Scores: {'pearson_r2_score': 0.4485035953563968}\n",
+            "test Scores: {'pearson_r2_score': 0.4485036017635912}\n"
           ],
           "name": "stdout"
         }
@@ -416,20 +409,9 @@
         "id": "ozCSGVWsAo5N"
       },
       "source": [
-        "smiles = ['O=C(CC(/C=C/C1=CC=C(O)C(O)=C1)=O)/C=C/C2=CC(OC)=C(O)C=C2',\n",
-        "'O=C(CC(/C=C/C1=CC=C(O)C(O)=C1)=O)/C=C/C2=CC(OC(O)=O)=C(O)C=C2',\n",
-        "'O=C(CC(/C=C/C1=CC=C(O)C(O)=C1)=O)/C=C/C2=CC(Br)=C(O)C=C2',\n",
-        "'O=C(CC(/C=C/C1=CC=C(O)C(OC)=C1)=O)/C=C/C2=CC(OC(O)=O)=C(O)C=C2',\n",
-        "'O=C(CC(/C=C/C1=CC=C(O)C(OC)=C1)=O)/C=C/C2=CC(Br)=C(O)C=C2',\n",
-        "'O=C(CC(/C=C/C1=CC=C(O)C(Br)=C1)=O)/C=C/C2=CC(OC(O)=O)=C(O)C=C2',\n",
-        "'O=C(/C(CCC/1)=C/C2=CC(OC)=C(O)C=C2)C1=C\\C3=CC=C(O)C(O)=C3',\n",
-        "'O=C(/C(CCC/1)=C/C2=CC(OC(O)=O)=C(O)C=C2)C1=C\\C3=CC=C(O)C(O)=C3',\n",
-        "'O=C(/C(CCC/1)=C/C2=CC(Br)=C(O)C=C2)C1=C\\C3=CC=C(O)C(O)=C3',\n",
-        "'O=C(/C(CCC/1)=C/C2=CC(OC(O)=O)=C(O)C=C2)C1=C\\C3=CC=C(O)C(OC)=C3',\n",
-        "'O=C(/C(CCC/1)=C/C2=CC(Br)=C(O)C=C2)C1=C\\C3=CC=C(O)C(OC)=C3',\n",
-        "'O=C(/C(CCC/1)=C/C2=CC(OC(O)=O)=C(O)C=C2)C1=C\\C3=CC=C(O)C(Br)=C3']"
+        "smiles = ['O=C(CC(/C=C/C1=CC=C(O)C(O)=C1)=O)/C=C/C2=CC(OC)=C(O)C=C2','O=C(CC(/C=C/C1=CC=C(O)C(O)=C1)=O)/C=C/C2=CC(OC(O)=O)=C(O)C=C2','O=C(CC(/C=C/C1=CC=C(O)C(O)=C1)=O)/C=C/C2=CC(Br)=C(O)C=C2','O=C(CC(/C=C/C1=CC=C(O)C(OC)=C1)=O)/C=C/C2=CC(OC(O)=O)=C(O)C=C2','O=C(CC(/C=C/C1=CC=C(O)C(OC)=C1)=O)/C=C/C2=CC(Br)=C(O)C=C2','O=C(CC(/C=C/C1=CC=C(O)C(Br)=C1)=O)/C=C/C2=CC(OC(O)=O)=C(O)C=C2','O=C(/C(CCC/1)=C/C2=CC(OC)=C(O)C=C2)C1=C\\C3=CC=C(O)C(O)=C3','O=C(/C(CCC/1)=C/C2=CC(OC(O)=O)=C(O)C=C2)C1=C\\C3=CC=C(O)C(O)=C3','O=C(/C(CCC/1)=C/C2=CC(Br)=C(O)C=C2)C1=C\\C3=CC=C(O)C(O)=C3','O=C(/C(CCC/1)=C/C2=CC(OC(O)=O)=C(O)C=C2)C1=C\\C3=CC=C(O)C(OC)=C3','O=C(/C(CCC/1)=C/C2=CC(Br)=C(O)C=C2)C1=C\\C3=CC=C(O)C(OC)=C3','O=C(/C(CCC/1)=C/C2=CC(OC(O)=O)=C(O)C=C2)C1=C\\C3=CC=C(O)C(Br)=C3','O=C(CC(/C=C/C1=CC=C(O)C(OC)=C1)=O)/C=C/C2=CC(OC)=C(O)C=C2','O=C1/C(CCC/C1=C\\C2=CC=C(C(Br)=C2)O)=C/C3=CC(Br)=C(C=C3)O']"
       ],
-      "execution_count": 11,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -439,7 +421,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VXoAkfdCAtUu",
-        "outputId": "abd6c3f5-dda3-473f-b527-b91f93b03361"
+        "outputId": "ac425eaf-124d-47fd-c8de-d62c0864db23"
       },
       "source": [
         "from rdkit import Chem\n",
@@ -450,30 +432,32 @@
         "predicted_pIC50 = graph_conv.predict_on_batch(x)\n",
         "predicted_pIC50"
       ],
-      "execution_count": 12,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0.31658122],\n",
-              "       [ 0.65783095],\n",
-              "       [ 0.53196084],\n",
-              "       [ 0.10425879],\n",
-              "       [ 0.31291673],\n",
-              "       [ 0.43647417],\n",
-              "       [ 0.14772217],\n",
-              "       [-0.1246293 ],\n",
-              "       [-0.26745912],\n",
-              "       [ 0.2859868 ],\n",
-              "       [ 0.37266642],\n",
-              "       [ 0.15686457]], dtype=float32)"
+              "array([[-0.20332716],\n",
+              "       [-0.29523158],\n",
+              "       [ 0.27267447],\n",
+              "       [-0.17727722],\n",
+              "       [ 0.3948581 ],\n",
+              "       [ 0.5273888 ],\n",
+              "       [-1.5807843 ],\n",
+              "       [-1.1606088 ],\n",
+              "       [-0.6668961 ],\n",
+              "       [-1.1699895 ],\n",
+              "       [-0.47290358],\n",
+              "       [-0.3007403 ],\n",
+              "       [-0.28920236],\n",
+              "       [ 0.2197175 ]], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 101
         }
       ]
     }
